Fix TOC spacing on Chrome

--- a/_sass/toc.scss
+++ b/_sass/toc.scss
@@ -93,7 +93,7 @@
       }
 
       menu.submenu {
-        margin-left: 1em;
+        margin: 0 0 0 1em;
         padding: 0;
         list-style-type: none;
         overflow-y: hidden;
